--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Partytown
+static/~partytown
+
 node_modules/
 .cache/
 public
+
+# dotenv environment variables file
+.env
+.env.test
+-env.example
+.env.*
