--- a/package.json
+++ b/package.json
@@ -15,8 +15,35 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@builder.io/partytown": "^0.8.1",
+    "@fontsource/clear-sans": "^5.0.7",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@loadable/component": "^5.16.2",
+    "@mdx-js/react": "^2.3.0",
+    "@react-hook/intersection-observer": "^3.1.1",
+    "dotenv": "^16.3.1",
     "gatsby": "^5.13.0",
+    "gatsby-plugin-csp-nonce": "^1.2.0",
+    "gatsby-plugin-exclude": "^1.0.2",
+    "gatsby-plugin-image": "^3.13.0",
+    "gatsby-plugin-intl": "^5.10.0",
+    "gatsby-plugin-manifest": "^5.13.0",
+    "gatsby-plugin-mdx": "^5.13.0",
+    "gatsby-plugin-offline": "^6.13.0",
+    "gatsby-plugin-preact": "^7.13.0",
+    "gatsby-plugin-robots-txt": "^1.8.0",
+    "gatsby-plugin-security-txt": "^1.2.1",
+    "gatsby-plugin-sharp": "^5.13.0",
+    "gatsby-plugin-sitemap": "^6.13.0",
+    "gatsby-source-filesystem": "^5.13.0",
+    "preact": "^10.19.3",
+    "preact-render-to-string": "^5.2.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-cookie-consent": "^9.0.0",
+    "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.5.3"
   }
 }
