--- a/package.json
+++ b/package.json
@@ -34,18 +34,14 @@
     "gatsby-plugin-manifest": "^5.13.0",
     "gatsby-plugin-mdx": "^5.13.0",
     "gatsby-plugin-offline": "^6.13.0",
-    "gatsby-plugin-preact": "^7.13.0",
     "gatsby-plugin-preload-fonts": "^4.13.0",
     "gatsby-plugin-robots-txt": "^1.8.0",
     "gatsby-plugin-security-txt": "^1.2.1",
     "gatsby-plugin-sharp": "^5.13.0",
     "gatsby-plugin-sitemap": "^6.13.0",
     "gatsby-source-filesystem": "^5.13.0",
-    "preact": "^10.19.3",
-    "preact-render-to-string": "^5.2.6",
     "react": "^18.2.0",
     "react-cookie-consent": "^9.0.0",
-    "react-dom": "^18.2.0",
-    "react-intersection-observer": "^9.5.3"
+    "react-dom": "^18.2.0"
   }
 }
