headers met cache netlify toml

--- a/netlify.toml
+++ b/netlify.toml
@@ -22,3 +22,28 @@
   to = "https://www.google-analytics.com/collect"
   status = 200
   force = true
+
+[[headers]]
+  for = "/analytics.js"
+  [headers.values]
+    Cache-Control = "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0"
+    Access-Control-Allow-Origin = "*"
+
+[[headers]]
+  for = "/collect"
+  [headers.values]
+    Cache-Control = "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0"
+    Access-Control-Allow-Origin = "*"
+
+[[headers]]
+  for = "/gtag/js"
+  [headers.values]
+    Cache-Control = "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0"
+    Access-Control-Allow-Origin = "*"
+
+[[headers]]
+  for = "/gtm.js"
+  [headers.values]
+    Cache-Control = "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0"
+    Access-Control-Allow-Origin = "*"
+
