--- a/netlify.toml
+++ b/netlify.toml
@@ -24,7 +24,7 @@
   force = true
 
 [[redirects]]
-  from = "/static/*"
+  from = "/hotjar/*"
   to = "https://static.hotjar.com/:splat"
   status = 200
   force = true
@@ -54,4 +54,8 @@
     Cache-Control = "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0"
     Access-Control-Allow-Origin = "*"
 
-
+[[headers]]
+  for = "/hotjar/*"
+  [headers.values]
+    Cache-Control = "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0"
+    Access-Control-Allow-Origin = "*"
