--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gatsby-plugin-sitemap": "^6.13.1",
     "gatsby-source-filesystem": "^5.13.1",
     "react": "^18.3.1",
+    "react-cookie": "^7.2.0",
     "react-cookie-consent": "^9.0.0",
     "react-dom": "^18.3.1"
   },
